--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.15.0",
+    "connected-react-router": "^6.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
